Fix spotlight dot gap

--- a/frontend/src/views/pages/home/index.css
+++ b/frontend/src/views/pages/home/index.css
@@ -95,7 +95,7 @@
   cursor: pointer;
   height: 15px;
   width: 15px;
-  margin: 20px;
+  margin: 40px 5px 20px 5px;
   padding: 5px;
   background-color: #666;
   border-radius: 50%;
